<resources>
    <string name="app_name">Teminipro</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="login">LOGIN</string>
    <string name="login_to_your_account">Login to your Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_nameinact">Display Name</string>
    <string name="hi_there_i_m_using_messenger">Hi there,I\'m Using Messenger+</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="display_nameuser">Display Name</string>
    <string name="user_default_status">User default Status</string>
    <string name="display_nameprofile">Display Name</string>
    <string name="current_user_statuspro">Current User Status</string>
    <string name="total_friendsprofile">Total Friends</string>
    <string name="send_friend_requestpro">SEND FRIEND REQUEST</string>
    <string name="decline_friend_requestpro">DECLINE FRIEND REQUEST</string>


</resources>
